tests/single_instruction_translation_validation/mcsema/register-variants/psrlw_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:208:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %22)
            ^
0.02user 0.00system 0:00.02elapsed 107%CPU (0avgtext+0avgdata 27612maxresident)k
0inputs+16outputs (0major+3267minor)pagefaults 0swaps
